--- a/Recognize.html
+++ b/Recognize.html
@@ -9,13 +9,7 @@
 </head>
 
 <body>
-  <div class="title">
-    <h1>Play with AI</h1>
-  </div>
-  <div class="buttons">
-    <a href="Recognize.html"><button type="button">Recognize</button></a>
-    <a href="Disguize.html"><button type="button">Disguize</button></a>
-  </div>
+  <script src="scriptRecognize.js"></script>
 </body>
 
 </html>
