--- a/index.html
+++ b/index.html
@@ -4,17 +4,23 @@
 <head>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.min.js"></script>
   <script src="https://unpkg.com/ml5@0.5.0/dist/ml5.min.js"></script>
-  <meta charset="utf-8" />
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>SnowDay Exhibit</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <div class="title">
-    <h1>Play with AI</h1>
-  </div>
-  <div class="buttons">
-    <a href="Recognize.html"><button type="button">Recognize</button></a>
-    <a href="Disguize.html"><button type="button">Disguize</button></a>
+  <div class=" container">
+    <img src="assets/SDLL Logo.jpg" alt="Snow Day Learning Lab">
+    <h5>PLAY WITH AI</h5>
+    <h6>What is the model really looking for? <br> How can we acheive diversity? </h6>
+    <br>
+    <a href="Recognize.html" class="waves-effect waves-light btn-large blue darken-4 z-depth-5">Recognize</a>
+    <a href="Disguize.html" class="waves-effect waves-light btn-large blue darken-4 z-depth-5">Disguize</a>
   </div>
 </body>
 
