--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
 <body>
   <div class=" container">
-    <img src="assets/SDLL Logo.jpg" alt="Snow Day Learning Lab">
+    <a href="https://www.snowdaylearninglab.org/">
+      <img src="assets/SDLL Logo.jpg" alt="Snow Day Learning Lab">
+    </a>
     <h5>PLAY WITH AI</h5>
     <h6>What is the model really looking for? <br> How can we acheive diversity? </h6>
     <br>
