Begin setting up capture and trace

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h6>What is the model really looking for? <br> How can we acheive diversity? </h6>
     <br>
     <a href="Recognize.html" class="waves-effect waves-light btn-large blue darken-4 z-depth-5">Recognize</a>
-    <a href="Disguize.html" class="waves-effect waves-light btn-large blue darken-4 z-depth-5">Disguize</a>
+    <a href="Disguise.html" class="waves-effect waves-light btn-large blue darken-4 z-depth-5">Disguise</a>
   </div>
 </body>
 
